@@ -120,26 +120,42 @@ name|HBaseTestCase
 implements|implements
 name|HConstants
 block|{
-comment|/**    * @throws IOException    */
-specifier|public
-name|void
-name|testAppend
-parameter_list|()
-throws|throws
-name|IOException
-block|{
+specifier|private
 name|Path
 name|dir
-init|=
+decl_stmt|;
+specifier|private
+name|FileSystem
+name|fs
+decl_stmt|;
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|setUp
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|super
+operator|.
+name|setUp
+argument_list|()
+expr_stmt|;
+name|this
+operator|.
+name|dir
+operator|=
 name|getUnitTestdir
 argument_list|(
 name|getName
 argument_list|()
 argument_list|)
-decl_stmt|;
-name|FileSystem
+expr_stmt|;
+name|this
+operator|.
 name|fs
-init|=
+operator|=
 name|FileSystem
 operator|.
 name|get
@@ -148,7 +164,7 @@ name|this
 operator|.
 name|conf
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 name|fs
@@ -167,6 +183,273 @@ name|dir
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|tearDown
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+if|if
+condition|(
+name|this
+operator|.
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|this
+operator|.
+name|dir
+argument_list|)
+condition|)
+block|{
+name|this
+operator|.
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|this
+operator|.
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+name|super
+operator|.
+name|tearDown
+argument_list|()
+expr_stmt|;
+block|}
+comment|/**    * Just write multiple logs then split.  Before fix for HADOOP-2283, this    * would fail.    * @throws IOException    */
+specifier|public
+name|void
+name|testSplit
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|Text
+name|tableName
+init|=
+operator|new
+name|Text
+argument_list|(
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+specifier|final
+name|Text
+name|rowName
+init|=
+name|tableName
+decl_stmt|;
+name|HLog
+name|log
+init|=
+operator|new
+name|HLog
+argument_list|(
+name|this
+operator|.
+name|fs
+argument_list|,
+name|this
+operator|.
+name|dir
+argument_list|,
+name|this
+operator|.
+name|conf
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+comment|// Add edits for three regions.
+try|try
+block|{
+for|for
+control|(
+name|int
+name|ii
+init|=
+literal|0
+init|;
+name|ii
+operator|<
+literal|3
+condition|;
+name|ii
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|3
+condition|;
+name|i
+operator|++
+control|)
+block|{
+for|for
+control|(
+name|int
+name|j
+init|=
+literal|0
+init|;
+name|j
+operator|<
+literal|3
+condition|;
+name|j
+operator|++
+control|)
+block|{
+name|TreeMap
+argument_list|<
+name|HStoreKey
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+name|edit
+init|=
+operator|new
+name|TreeMap
+argument_list|<
+name|HStoreKey
+argument_list|,
+name|byte
+index|[]
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|Text
+name|column
+init|=
+operator|new
+name|Text
+argument_list|(
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|j
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|edit
+operator|.
+name|put
+argument_list|(
+operator|new
+name|HStoreKey
+argument_list|(
+name|rowName
+argument_list|,
+name|column
+argument_list|,
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+argument_list|)
+argument_list|,
+name|column
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|append
+argument_list|(
+operator|new
+name|Text
+argument_list|(
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|i
+argument_list|)
+argument_list|)
+argument_list|,
+name|tableName
+argument_list|,
+name|edit
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+name|log
+operator|.
+name|rollWriter
+argument_list|()
+expr_stmt|;
+block|}
+name|HLog
+operator|.
+name|splitLog
+argument_list|(
+name|this
+operator|.
+name|testDir
+argument_list|,
+name|this
+operator|.
+name|dir
+argument_list|,
+name|this
+operator|.
+name|fs
+argument_list|,
+name|this
+operator|.
+name|conf
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|log
+operator|!=
+literal|null
+condition|)
+block|{
+name|log
+operator|.
+name|closeAndDelete
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+comment|/**    * @throws IOException    */
+specifier|public
+name|void
+name|testAppend
+parameter_list|()
+throws|throws
+name|IOException
+block|{
 specifier|final
 name|int
 name|COL_COUNT
@@ -595,24 +878,6 @@ name|reader
 operator|.
 name|close
 argument_list|()
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|fs
-operator|.
-name|exists
-argument_list|(
-name|dir
-argument_list|)
-condition|)
-block|{
-name|fs
-operator|.
-name|delete
-argument_list|(
-name|dir
-argument_list|)
 expr_stmt|;
 block|}
 block|}
